# indra_variants

./: README.md  pyproject.toml  requirements.txt
indra_variants/app/: config.py  variant_network.py
indra_variants/data/: genes_to_pmids.tsv  label_classified.tsv
indra_variants/generate/: __init__.py  assembly_pathway.py  gene_pmid_index.py
indra_variants/predict/gnn_pretraining/: extract_triples.py  rgcn_pretrain.py
indra_variants/predict/seq_embedding/: embedding.py
indra_variants/predict/train/: build_train_dataset.py  dataset_split.py  prediction.py  training.py
indra_variants/prediction/gnn_pretraining/: extract_triples.py
indra_variants/prediction/seq_embedding/: embedding.py
indra_variants/prediction/train/: build_train_dataset.py
